--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -21,9 +21,10 @@ import { Card, CardGrid } from "@astrojs/starlight/components";
 ## Start Here
 
 <CardGrid>
-  <Card title="Write Notes" icon="pencil">
-    These are my research, references, notes, snippets.
+  <Card title="Goto Quick Refs" icon="open-book">
+    Goto Quick Refs [Quick Refs](https://quickref.me/).
   </Card>
+  
   <Card title="Explore Start Me" icon="open-book">
     Goto Quick Links [Start Me](https://start.me/p/gGGr4K/varun-sharma/).
   </Card>
