Feat: made new dark theme

--- a/src/content/docs/pages/post.mdx
+++ b/src/content/docs/pages/post.mdx
@@ -4,7 +4,7 @@ description: Personal notes, research and references
 hero:
   tagline: Personal notes, research and references
   image:
-    file: ../assets/houston.jpg
+    file: ../../assets/houston.jpg
     # file: ../../assets/houston.webp
   actions:
     - text: Goto LinkedIn
