learning cloud computing

--- a/src/content/docs/01_Projects/index.mdx
+++ b/src/content/docs/01_Projects/index.mdx
@@ -5,11 +5,10 @@ description: A index of project pages
 
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
-## Marketing
-
+## Engineering
 <CardGrid>
-  <Card title="Goto Quick Refs" icon="open-book">
-    Goto Quick Refs [Quick Refs](https://quickref.me/).
+  <Card title="self-RAG" icon="open-book">
+    Goto [Project Overview](/01_projects/self-rag/overview/).
   </Card>
   
   <Card title="Explore Start Me" icon="open-book">
